Add files and update app.js

--- a/views/about.pug
+++ b/views/about.pug
@@ -8,7 +8,7 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Add your name.
-        h1 Name
+        h1 Will Albertsen
 
         //- Feel free personalize the title below
         p.lead.text-light
@@ -17,20 +17,19 @@ block content
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | I am currently enrolled in an Associate's degree program in Software and Web Development at Richmond Community College in Hamlet, NC, which I plan to complete by May of 2021. Through my education thus far, I have gained a solid foundation in JavaScript, Java, C# and SQL fundamentals. To expand my knowledge further, I enrolled in an online Tech Degree Program through Treehouse with an emphasis in Full Stack JavaScript. Through this program, I am obtaining invaluable experience building projects using JavaScript and JQuery. Peer review is an essential component to completing this course. Through peer review, I have become more efficient in reading and debuggin the code of my fellow classmates. Additionally, I am developing a Spanish-learning website called LoComprendo.com. This site features tooltips as well as true/false and multiple-choice exercises coded in JavaScript and jQuery. 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
+
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
           li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li jQuery
+          li OOP
+          li HTML
+          li CSS 
+          li Pug
         h6 Contact Info
 
         //- Add your own contact info
@@ -39,9 +38,9 @@ block content
           li email@email.com
 
         //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href=`${linkedIn}`) LinkedIn
+        a.button.expanded(href=`${gitHub}`) GitHub
+        a.button.expanded(href= `${twitter}`) Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
