--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,18 +14,18 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='https://placehold.it/550x350')
+            img.thumbnail(src='/static/images/profile_pic.png')
           .cell.auto
 
             //- Add your name here.
-            h5 Name
+            h5 Will Albertsen
 
             //- Add text here to describe who you are, what you do, and why you are so awesome.
             p.text-light
-              | Description
+              | I'm a Spanish Instructor by trade, but the world of coding has been calling out to me for the past two years. I make time to learn new things and reinforce my current skills each and every day. 
 
             //- Add about page route to the href below. 
-            a(href='') Learn More →
+            a(href='/about') Learn More →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
